Refactor auth module and project structure improvements